project(databook_cpp)
cmake_minimum_required(VERSION 3.2)

include_directories(/home/daniel/Libraries/eigen3)
include_directories(/home/daniel/Libraries/matplotlib-cpp/)
include_directories(/usr/include/python3.10)
include_directories(/usr/lib/python3/dist-packages/numpy/core/include)

add_subdirectory(CH01)